--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-102dp">
+        tools:layout_editor_absoluteY="-28dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -23,15 +23,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="95dp"
                 android:layout_marginLeft="95dp"
-                android:layout_marginTop="136dp"
+                android:layout_marginTop="68dp"
                 android:layout_marginEnd="95dp"
                 android:layout_marginRight="95dp"
                 android:ems="10"
                 android:hint="Usuario"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.272"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <EditText
                 android:id="@+id/editTextNumberPassword"
@@ -39,13 +40,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="95dp"
                 android:layout_marginLeft="95dp"
-                android:layout_marginTop="92dp"
+                android:layout_marginTop="60dp"
                 android:layout_marginEnd="95dp"
                 android:layout_marginRight="95dp"
                 android:ems="10"
                 android:hint="Contraseña"
                 android:inputType="numberPassword"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.454"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
@@ -55,17 +57,64 @@
                 android:layout_height="45dp"
                 android:layout_marginStart="161dp"
                 android:layout_marginLeft="161dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="44dp"
                 android:layout_marginEnd="162dp"
                 android:layout_marginRight="162dp"
                 android:background="@drawable/borde_redondo"
                 android:fontFamily="sans-serif"
                 android:text="Iniciar sesión"
                 android:textAllCaps="false"
+                android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.528"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="90dp"
+                android:layout_marginLeft="90dp"
+                android:layout_marginTop="204dp"
+                android:text="Iniciar sesión"
+                android:textColor="#000000"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="136dp"
+                android:layout_height="31dp"
+                android:layout_marginStart="137dp"
+
+                android:layout_marginLeft="137dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="137dp"
+                android:layout_marginRight="137dp"
+                android:background="@null"
+                android:text="\n crea una nueva"
+                android:textColor="#FF006A"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="152dp"
+                android:layout_marginLeft="152dp"
+                android:layout_marginTop="36dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="No tienes cuenta?"
+                android:textColor="#000000"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
