--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/usuarioTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="95dp"
@@ -35,7 +35,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <EditText
-                android:id="@+id/editTextNumberPassword"
+                android:id="@+id/contraseñaTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="95dp"
@@ -49,10 +49,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.454"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+                app:layout_constraintTop_toBottomOf="@+id/usuarioTxt" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/iniciarBt"
                 android:layout_width="213dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="161dp"
@@ -62,6 +62,7 @@
                 android:layout_marginRight="162dp"
                 android:background="@drawable/borde_redondo"
                 android:fontFamily="sans-serif"
+                android:onClick="IniciarOnClick"
                 android:text="Iniciar sesión"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -69,7 +70,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.528"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />
+                app:layout_constraintTop_toBottomOf="@+id/contraseñaTxt" />
 
             <TextView
                 android:id="@+id/textView"
@@ -86,7 +87,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/crearBt"
                 android:layout_width="136dp"
                 android:layout_height="31dp"
                 android:layout_marginStart="137dp"
@@ -96,12 +97,13 @@
                 android:layout_marginEnd="137dp"
                 android:layout_marginRight="137dp"
                 android:background="@null"
+                android:onClick="crearOnClick"
                 android:text="\n crea una nueva"
                 android:textColor="#FF006A"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button" />
+                app:layout_constraintTop_toBottomOf="@+id/iniciarBt" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -114,7 +116,7 @@
                 android:text="No tienes cuenta?"
                 android:textColor="#000000"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button" />
+                app:layout_constraintTop_toBottomOf="@+id/iniciarBt" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
