--- a/app/src/main/res/layout/fragment_asignatura.xml
+++ b/app/src/main/res/layout/fragment_asignatura.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="16dp"
         android:background="@null"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_create_new_folder"
+        app:srcCompat="@drawable/ic_create_new_folder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
