--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,8 +18,8 @@
         tools:layout="@layout/fragment_asignatura" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.agendapp.Menu.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_calculator"
+        android:name="com.example.agendapp.Menu.ui.Calculadora.CalculadoraFragment"
+        android:label="Calculadora"
+        tools:layout="@layout/calculadora_fragment" />
 </navigation>
