--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="black">#373331</color>
+    <color name="orange">#D6895E</color>
+    <color name="white">#fff</color>
+    <color name="pink">#ffc0cb</color>
+    <color name="darkPink">#FF6C86</color>
 </resources>
