--- a/app/src/main/res/layout/asignatura_fragment.xml
+++ b/app/src/main/res/layout/asignatura_fragment.xml
@@ -10,6 +10,16 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/NumeroTxt"
+            android:layout_width="16dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="24dp"
+            android:text="TextView"
+            app:layout_constraintStart_toStartOf="@+id/btAsignatura"
+            app:layout_constraintTop_toTopOf="@+id/btAsignatura" />
+
+        <TextView
             android:id="@+id/NombreAsignatura"
             android:layout_width="123dp"
             android:layout_height="35dp"
@@ -31,6 +41,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_folder" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
