--- a/app/src/main/res/layout/activity_tablero.xml
+++ b/app/src/main/res/layout/activity_tablero.xml
@@ -48,10 +48,10 @@
             android:text="Guardar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.058"
+            app:layout_constraintHorizontal_bias="0.101"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.512" />
+            app:layout_constraintVertical_bias="0.102" />
 
         <Button
             android:id="@+id/rojo"
@@ -185,6 +185,22 @@
             android:onClick="modoLapiz"
             app:layout_constraintStart_toEndOf="@+id/brocha"
             app:layout_constraintTop_toBottomOf="@+id/borrador" />
+
+        <Button
+            android:id="@+id/cargarTablero"
+            android:layout_width="73dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="5dp"
+            android:onClick="cargarTablero"
+            android:text="Cargar"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/guardarTablero" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
