--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="black">#373331</color>
+    <color name="gray">#808080</color>
+    <color name="black">#000000</color>
     <color name="orange">#D6895E</color>
     <color name="white">#fff</color>
     <color name="pink">#ffc0cb</color>
