--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -100,7 +100,7 @@
 
             <ImageButton
 
-                android:id="@+id/imageButton"
+                android:id="@+id/returnBt"
                 android:layout_width="40dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="16dp"
