--- a/app/src/main/res/layout/fragment_subtema.xml
+++ b/app/src/main/res/layout/fragment_subtema.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,31 +16,28 @@
             android:layout_height="24dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="@+id/asignaturaBt"
-            app:layout_constraintTop_toTopOf="@+id/asignaturaBt" />
+            app:layout_constraintStart_toStartOf="@+id/subtemaBt"
+            app:layout_constraintTop_toTopOf="@+id/subtemaBt" />
 
         <TextView
-            android:id="@+id/asignaturaTxt"
+            android:id="@+id/nombreSubtema"
             android:layout_width="123dp"
             android:layout_height="35dp"
             android:layout_marginStart="19dp"
-            android:layout_marginLeft="19dp"
             android:layout_marginTop="19dp"
-            app:layout_constraintStart_toEndOf="@+id/asignaturaBt"
+            app:layout_constraintStart_toEndOf="@+id/subtemaBt"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/asignaturaBt"
+            android:id="@+id/subtemaBt"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
             android:layout_marginTop="2dp"
             android:background="@null"
             android:scaleType="fitXY"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-             />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
