Lista de requerimientos terminada
-Borrado de Usuario
-Definición de carpetas subtemas
-limite de subtemas
 otros que aun no se listan

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#fff</color>
     <color name="pink">#ffc0cb</color>
     <color name="darkPink">#FF6C86</color>
+    <color name="red">#FF0000</color>
 </resources>
