--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -27,6 +27,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:text="Nombre del usuario"
+                app:layout_constraintBottom_toTopOf="@+id/nombreTxt"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <EditText
                 android:id="@+id/nombreTxt"
                 android:layout_width="237dp"
@@ -37,6 +46,15 @@
                 android:textSize="18dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:text="Apellido del usuario"
+                app:layout_constraintBottom_toTopOf="@+id/apellidoTxt"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <EditText
                 android:id="@+id/apellidoTxt"
@@ -49,6 +67,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/nombreTxt" />
 
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:text="Carrera"
+                app:layout_constraintBottom_toTopOf="@+id/carreraTxt"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <EditText
                 android:id="@+id/carreraTxt"
                 android:layout_width="237dp"
@@ -59,6 +86,15 @@
                 android:textSize="18dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/apellidoTxt" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:text="Edad del usuario"
+                app:layout_constraintBottom_toTopOf="@+id/edadTxt"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <EditText
                 android:id="@+id/edadTxt"
@@ -71,6 +107,15 @@
                 android:inputType="number"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/carreraTxt" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:text="Ciudad"
+                app:layout_constraintBottom_toTopOf="@+id/ciudadTxt"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <EditText
                 android:id="@+id/ciudadTxt"
@@ -88,14 +133,27 @@
                 android:id="@+id/modBt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="133dp"
-                android:layout_marginLeft="133dp"
-                android:layout_marginTop="120dp"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="104dp"
                 android:background="@drawable/borde_redondo"
                 android:onClick="modificarListener"
                 android:text="Modificar datos"
                 android:textColor="#ffffff"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ciudadTxt" />
+
+            <Button
+                android:id="@+id/eliminarUsuarioBt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="104dp"
+                android:layout_marginEnd="97dp"
+                android:background="@drawable/borde_redondo"
+                android:backgroundTint="@color/red"
+
+                android:text="Eliminar Usuario"
+                android:textColor="#ffffff"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ciudadTxt" />
 
             <ImageButton
