--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,12 @@
             android:id="@+id/nav_asignatura"
             android:icon="@drawable/opcion_1"
             android:title="Asignaturas" />
+        <item
+            android:id="@+id/nav_tareas"
+            android:icon="@drawable/ic_tareas"
+            android:title="Tareas"
+            />
+
     </group>
     <group>
         <item
