--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,11 @@
         android:name="com.example.agendapp.Menu.ui.Calculadora.CalculadoraFragment"
         android:label="Calculadora"
         tools:layout="@layout/calculadora_fragment" />
+
+    <fragment
+        android:id="@+id/nav_tareas"
+        android:name="com.example.agendapp.Menu.ui.Tareas.TareasFragment"
+        android:label="Tareas"
+        tools:layout="@layout/tareas_fragment"
+        />
 </navigation>
