--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,6 +19,11 @@
             android:icon="@drawable/ic_tareas"
             android:title="Tareas"
             />
+        <item
+            android:id="@+id/nav_creditos"
+            android:icon="@drawable/ic_tareas"
+            android:title="Creditos"
+            />
 
     </group>
     <group>
