--- a/app/src/main/res/layout/activity_lista_tableros.xml
+++ b/app/src/main/res/layout/activity_lista_tableros.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="75dp"
+        android:layout_marginEnd="68dp"
 
         android:background="@null"
         android:onClick="returnOnClick"
@@ -24,29 +24,29 @@
 
     <TextView
         android:id="@+id/subtemaTxt"
-        android:layout_width="162dp"
-        android:layout_height="18dp"
+        android:layout_width="177dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="68dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="73dp"
         android:autoSizeTextType="uniform"
         android:autoText="false"
         android:isScrollContainer="true"
+
         android:scrollbars="horizontal"
         android:scrollHorizontally="true"
-
         android:textAlignment="center"
-        android:textSize="28dp"
-        app:layout_constraintEnd_toStartOf="@+id/nuevoTablero"
+        android:textSize="80dp"
+        app:layout_constraintStart_toEndOf="@+id/returnBt2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/nuevoTablero"
-        android:layout_width="36dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-
+        android:layout_width="25dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
         android:background="@null"
+        android:onClick="nuevoTablero"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -64,13 +64,16 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tableros"
-        android:layout_width="409dp"
-        android:layout_height="674dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="2dp"
+        android:layout_width="331dp"
+        android:layout_height="527dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="39dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/returnBt2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
