--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,4 +29,10 @@
         android:label="Tareas"
         tools:layout="@layout/tareas_fragment"
         />
+
+    <fragment
+        android:id="@+id/nav_creditos"
+        android:name="com.example.agendapp.Menu.Creditos.CreditosFragment"
+        android:label="Créditos"
+        tools:layout="@layout/fragment_creditos" />
 </navigation>
